--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
 		"webpack-stream": "latest"
 	},
 	"dependencies": {
+		"aos": "^2.3.4",
 		"gulp-cheerio": "^1.0.0",
 		"isotope-layout": "^3.0.6",
 		"react": "^18.2.0",
